@@ -1,6 +1,7 @@
 cm4all-beng-proxy (0.5.7) unstable; urgency=low
 
   * forward the Content-Disposition header
+  * handler: assign new session to local variable, fix segfault
 
  --
 
